add navigation to main page

--- a/pages/main-page/index.html
+++ b/pages/main-page/index.html
@@ -41,4 +41,5 @@
     <div id="collapse-button-section"><p><button class="collapsible">Expand/Collapse</button></p></div>
     
   </body>
+  <script src="../../src/renderer/main-rederer.js"></script>
 </html>
